@@ -1,21 +1,21 @@
 
-# attaches the descriptor pool to the search path at the given 
+# attaches the descriptor pool to the search path at the given
 # position
 
 OTABLE <- NULL
 NAMESPACE <- environment()
 
 attachDescriptorPool <- function( pos = 2){
-	
+
 	if( is.null( OTABLE ) ){
-		unlockBinding( "OTABLE", NAMESPACE )
-		
-		otable <- .Call( "newProtocolBufferLookup" , PACKAGE = "RProtoBuf" ) 
+		#unlockBinding( "OTABLE", NAMESPACE )
+
+		otable <- .Call( "newProtocolBufferLookup" , PACKAGE = "RProtoBuf" )
 		attach( otable, pos = pos, name = "RProtoBuf:DescriptorPool" )
-		
-		assign( "OTABLE", otable, envir = NAMESPACE, inherits = FALSE) 
+
+		assign( "OTABLE", otable, envir = NAMESPACE, inherits = FALSE)
 		lockBinding( "OTABLE", NAMESPACE )
 	}
-	 
+
 }
 
